...

    },
    "Câmbio → EUR" : {
      "comment" : "A label for the exchange rate from the local currency to the euro.",
      "isCommentAutoGenerated" : true
    },
    "Cancelar" : {

    },
    "cashflow_trend_subtitle" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
      "isCommentAutoGenerated" : true
    },
    "Deixar de seguir" : {
      "comment" : "A label for a context menu item that removes a",
      "isCommentAutoGenerated" : true
    },
    "Descrição" : {
      "comment" : "A label for the description field in the transaction form.",
      "isCommentAutoGenerated" : true
    },
    "desde %@" : {
      "comment" : "A label showing the duration of a debt.",
      "isCommentAutoGenerated" : true
...
            "value" : "Save"
          }
        },
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
          }
        }
      }
    },
    "form_select_account" : {
      "localizations" : {
...
            "value" : "Summary"
          }
        },
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Resumo"
          }
        }
      }
    },
    "investment_total_cost" : {
      "extractionState" : "stale",
...
            "value" : "Edit Transaction"
          }
        },
        "pt" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Editar Transação"
          }
        }
      }
    },
    "transaction_type_asset_purchase" : {
      "extractionState" : "stale",
...
